Centered The buttons to the page

--- a/Cabshare.html
+++ b/Cabshare.html
@@ -19,8 +19,13 @@
     <main>
       <h1>Cab Share</h1>
       <h2>Making your trip to airports and stations easier.</h2>
-      <button class="button button1">Tickets</button>
-      <button class="button button2">Upload</button>
+      <div class="container">
+        <div class="center">
+          <button class="button button1">Tickets</button>
+          <button class="button button2">Upload</button>
+        </div>
+      </div>
+      
     </main>
     <script src="index.js"></script>
 </body>
