--- a/Cabshare.html
+++ b/Cabshare.html
@@ -12,6 +12,9 @@
   <link rel="icon" sizes="192x192" href="" type="image/png"/>
   <link rel="shortcut icon" href="" type="image/png"/>
   <link rel="apple-touch-icon" href="" type="image/png"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -25,7 +28,8 @@
           <button class="button button2">Upload</button>
         </div>
       </div>
-      
+      <h4>About Me</h4>
+      <p class="Details">Atul Bharti<br><br><a href="https://www.linkedin.com/in/atul-bharti-proff/">linked.in</a><br><br><a href="https://github.com/atulbhartiproff">Github</a></p>
     </main>
     <script src="index.js"></script>
 </body>
