--- a/Cabshare.html
+++ b/Cabshare.html
@@ -19,18 +19,26 @@
 </head>
 
 <body>
-    <main>
+  <header>
       <h1>Cab Share</h1>
       <h2>Making your trip to airports and stations easier.</h2>
+  </header>
+  
+  <main>
       <div class="container">
         <div class="center">
           <button class="button button1">Tickets</button>
           <button class="button button2">Upload</button>
         </div>
       </div>
+  </main>
+
+  <footer>
+      <hr>
       <h4>About Me</h4>
-      <p class="Details">Atul Bharti<br><br><a href="https://www.linkedin.com/in/atul-bharti-proff/">linked.in</a><br><br><a href="https://github.com/atulbhartiproff">Github</a></p>
-    </main>
-    <script src="index.js"></script>
+      <p class="Details">Atul Bharti<br><a href="https://www.linkedin.com/in/atul-bharti-proff/">linked.in</a>
+                         <br><a href="https://github.com/atulbhartiproff">Github</a></p>
+  </footer>
+      <script src="index.js"></script>
 </body>
 </html>
